<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/default_padding"
        android:paddingEnd="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding_2x"
        android:paddingBottom="@dimen/default_padding_2x"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:adjustViewBounds="true"
            android:src="@mipmap/nitro" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_mono_bold"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#222722"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/txtVersion1"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            style="@style/DefaultText"
            android:text="@string/version"
            android:textColor="#979797"
            android:textSize="@dimen/button_font_size"/>
        <TextView
            style="@style/DefaultText"
            android:text="@string/about1"
            android:textAlignment="textStart"
            android:textColor="#666666"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding_3x"
            android:adjustViewBounds="true"
            android:src="@mipmap/logo" />
        <TextView
            android:id="@+id/txtVersion2"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            style="@style/DefaultText"
            android:text="@string/version"
            android:textColor="#979797"
            android:textSize="@dimen/button_font_size"/>
        <TextView
            style="@style/DefaultText"
            android:text="@string/about2"
            android:textAlignment="textStart"
            android:textColor="#666666"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding_3x"
            android:adjustViewBounds="true"
            android:src="@mipmap/belt" />
        <TextView
            android:id="@+id/txtVersion3"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            style="@style/DefaultText"
            android:text="@string/version"
            android:textColor="#979797"
            android:textSize="@dimen/button_font_size"/>
        <TextView
            style="@style/DefaultText"
            android:text="@string/about3"
            android:textAlignment="textStart"
            android:textColor="#666666"/>
    </LinearLayout>

</ScrollView>