<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/default_padding"
    android:paddingRight="@dimen/default_padding"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/default_padding"
        android:adjustViewBounds="true"
        android:src="@mipmap/tutorial1" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="@dimen/tutorial_bottom_padding"
        app:cardElevation="3dp"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:adjustViewBounds="true"
                    android:src="@mipmap/nitro" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/DefaultText"
                        android:text="@string/tutorial_help1" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding">

                <Button
                    android:id="@+id/btnStart"
                    style="@style/DefaultButton"
                    android:onClick="onClick"
                    android:text="@string/get_started" />

                <Button
                    android:id="@+id/btnRestore"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@android:color/transparent"
                    style="@style/DefaultButton"
                    android:onClick="onClick"
                    android:text="@string/restore_from_backup"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>