<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/default_margin"
    android:paddingLeft="@dimen/default_padding"
    android:paddingRight="@dimen/default_padding"
    android:orientation="vertical">

    <include layout="@layout/button_back" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="@dimen/tutorial_bottom_padding"
        app:cardElevation="3dp"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2.4">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:src="@mipmap/tutorial3" />
                </FrameLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/DefaultText"
                        android:text="@string/tutorial_help3" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="@dimen/default_padding"
                android:paddingRight="@dimen/default_padding">

                <Button
                    android:id="@+id/btnCreate"
                    style="@style/DefaultButton"
                    android:onClick="onClick"
                    android:text="@string/create_account" />

                <Button
                    android:id="@+id/btnRestoreMnemonic"
                    android:layout_marginBottom="@dimen/default_margin"
                    android:background="@android:color/transparent"
                    style="@style/DefaultButton"
                    android:onClick="onClick"
                    android:text="@string/restore_from_mnemonic"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>