<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MnemonicVerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/SubTitleText"
                android:text="@string/enter_mnemonic"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.1"
            android:layout_marginStart="@dimen/default_padding_2x"
            android:layout_marginEnd="@dimen/default_padding_2x"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="145dp"
                    android:background="@drawable/tag_container_border"/>

                <co.lujun.androidtagview.TagContainerLayout
                    android:id="@+id/tagContainerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:container_background_color="#0000"
                    app:container_border_radius="5dp"
                    app:container_border_width="0dp"
                    app:container_drag_sensitivity="1"
                    app:container_enable_drag="true"
                    app:container_min_lines="3"
                    app:horizontal_interval="8dp"
                    app:tag_background_color="#fcfefb"
                    app:tag_bd_distance="2.75dp"
                    app:tag_border_color="@color/colorPrimary"
                    app:tag_border_width="1dp"
                    app:tag_clickable="true"
                    app:tag_corner_radius="3dp"
                    app:tag_horizontal_padding="10dp"
                    app:tag_max_length="18"
                    app:tag_text_color="@color/colorPrimary"
                    app:tag_text_size="14sp"
                    app:tag_theme="none"
                    app:tag_vertical_padding="10dp"
                    app:vertical_interval="8dp" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/txtHint1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/KeyboardText"
                android:background="@drawable/keyboard_hint_bg"
                android:textSize="@dimen/small_font_size"
                android:onClick="onClick"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorKeyboardBorder"/>
            <TextView
                android:id="@+id/txtHint2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/KeyboardText"
                android:background="@drawable/keyboard_hint_bg"
                android:textSize="@dimen/small_font_size"
                android:onClick="onClick"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorKeyboardBorder"/>
            <TextView                android:id="@+id/txtHint3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/KeyboardText"
                android:background="@drawable/keyboard_hint_bg"
                android:textSize="@dimen/small_font_size"
                android:onClick="onClick"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/txtInput"
                android:layout_gravity="center"
                style="@style/KeyboardText"
                android:textStyle="bold"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorKeyboardInput"
            android:orientation="vertical">

            <android.inputmethodservice.KeyboardView
                android:id="@+id/keyboardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:keyBackground="@drawable/keyboard_key_bg"
                android:keyPreviewLayout="@null"
                android:keyTextColor="@color/textColorPrimary"
                android:keyTextSize="@dimen/default_font_size">
            </android.inputmethodservice.KeyboardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="@dimen/default_margin">

                <ImageButton
                    android:id="@+id/btnSpace"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:onClick="onClick"
                    android:backgroundTint="@color/colorKeyboardShift"/>
                <ImageButton
                    android:id="@+id/btnDelete"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:backgroundTint="@color/colorKeyboardShift"
                    android:tint="@color/textColorPrimary"
                    android:adjustViewBounds="true"
                    android:onClick="onClick"
                    android:src="@mipmap/backspace"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnBack"
                android:layout_weight="1"
                style="@style/DefaultButton"
                android:onClick="onClick"
                android:text="@string/back" />
            <Button
                android:id="@+id/btnNext"
                android:layout_weight="1"
                style="@style/DefaultButton"
                android:onClick="onClick"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>